[gd_scene load_steps=47 format=2]

[ext_resource path="res://Art/KarenEnemySpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Art/MediumShadow.png" type="Texture" id=2]
[ext_resource path="res://Hitboxes & Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Karen.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes & Hurtboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hitboxes & Hurtboxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 1472, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 1664, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 1728, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 1216, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 1344, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 1792, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 1856, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 1984, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Chase",
"speed": 8.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Aggro",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 4.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=52]
radius = 8.0
height = 10.0

[sub_resource type="CircleShape2D" id=53]
radius = 50.0

[sub_resource type="CircleShape2D" id=54]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=55]
radius = 5.99999
height = 4.00002

[node name="Karen" type="KinematicBody2D"]
z_index = 2
collision_layer = 16
collision_mask = 5
script = ExtResource( 4 )
KNOCKBACK = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 51 )
animation = "Idle"
frame = 8
playing = true

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 2 )
offset = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
show_behind_parent = true
rotation = 1.5708
shape = SubResource( 19 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 52 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.356863 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 53 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 54 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false
rotation = 1.5708

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 55 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
